PR Adicionar spec y endpoint de actualización de usuario (#2)
* User 2 - Feature update user
