# src/main/java/com/example/usermanageapirest/application/controller/response/UserInfoResponse.java
@@ -1,0 +1,14 @@
+package com.example.usermanageapirest.application.controller.response;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import lombok.Data;
+import lombok.experimental.Accessors;
+
+@Accessors(chain = true)
+@Data
+public class UserInfoResponse {
+
+	@JsonProperty("user")
+	private final UserResponse userResponse;
+
+}
