# src/main/java/com/example/usermanageapirest/application/controller/response/UserInfoResponseMapper.java
@@ -1,0 +1,22 @@
+package com.example.usermanageapirest.application.controller.response;
+
+import com.example.usermanageapirest.application.user.Mapper;
+import com.example.usermanageapirest.domain.entity.User;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
+
+@Component
+public class UserInfoResponseMapper implements Mapper<User, UserInfoResponse> {
+
+	private final Mapper<User, UserResponse> userResponseMapper;
+
+	@Autowired
+	public UserInfoResponseMapper(Mapper<User, UserResponse> userResponseMapper) {
+		this.userResponseMapper = userResponseMapper;
+	}
+
+	@Override
+	public UserInfoResponse map(User user) {
+		return new UserInfoResponse(this.userResponseMapper.map(user));
+	}
+}
