# src/main/java/com/example/usermanageapirest/domain/entity/Country.java
@@ -3,12 +3,12 @@ package com.example.usermanageapirest.domain.entity;
 import lombok.Data;
 import lombok.experimental.Accessors;
 
+import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
 import javax.persistence.SequenceGenerator;
-import javax.validation.constraints.NotBlank;
 
 @Accessors(chain = true)
 @Data
@@ -18,12 +18,12 @@ public class Country {
 	@Id
 	@GeneratedValue(strategy = GenerationType.SEQUENCE, generator = "sequence_country")
 	@SequenceGenerator(name = "sequence_country", allocationSize = 1)
-	private int id;
+	private Integer id;
 
-	@NotBlank
+	@Column(name = "name", nullable = false)
 	private String name;
 
-	@NotBlank
+	@Column(name = "language", nullable = false)
 	private String language;
 
 }
